--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "colorlog>=6.9.0",
     "notion-client>=2.4.0",
     "pandas>=2.3.1",
+    "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
     "telethon>=1.40.0",
     "uvloop>=0.21.0",
