--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,14 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "aiohttp>=3.12.15",
+    "click>=8.2.1",
     "colorlog>=6.9.0",
     "notion-client>=2.4.0",
     "pandas>=2.3.1",
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
     "telethon>=1.40.0",
+    "tqdm>=4.67.1",
     "uvloop>=0.21.0",
 ]
 
